==> CaiRongShou/GD32_UBS_MSC_FatFs_BootLoader/USER/bsp/spi_flash.c <==
#include "spi_flash.h"

void SPI_FLASH_Init(void)
{
    rcu_periph_clock_enable(BSP_GPIO_RCU);    // 使用A端口
    rcu_periph_clock_enable(BSP_SPI_RCU);     // 使能SPI0

    //引脚复用
    gpio_af_set(BSP_GPIO_PORT, GPIO_AF_5, BSP_SPI_SCK);
    gpio_af_set(BSP_GPIO_PORT, GPIO_AF_5, BSP_SPI_MISO);
    gpio_af_set(BSP_GPIO_PORT, GPIO_AF_5, BSP_SPI_MOSI);
    //引脚模式
    gpio_mode_set(BSP_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_NONE, BSP_SPI_SCK);
    gpio_mode_set(BSP_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_NONE, BSP_SPI_MISO);
    gpio_mode_set(BSP_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_NONE, BSP_SPI_MOSI);
    //输出模式
    gpio_output_options_set(BSP_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, BSP_SPI_SCK);
    gpio_output_options_set(BSP_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, BSP_SPI_MISO);
    gpio_output_options_set(BSP_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, BSP_SPI_MOSI);

    //开启CS引脚时钟
    rcu_periph_clock_enable(BSP_SPI_NSS_RCU);
    //配置CS引脚模式
    gpio_mode_set(BSP_GPIO_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, BSP_SPI_NSS);
    //配置CS输出模式
    gpio_output_options_set(BSP_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, BSP_SPI_NSS);
    //GD25Q32不选中
    gpio_bit_write(BSP_GPIO_PORT, BSP_SPI_NSS, SET);

    //SPI参数定义结构体
    spi_parameter_struct spi_init_struct;
    spi_init_struct.trans_mode        		= SPI_TRANSMODE_FULLDUPLEX;  // 传输模式全双工
    spi_init_struct.device_mode       		= SPI_MASTER;                // 配置为主机
    spi_init_struct.frame_size         		= SPI_FRAMESIZE_8BIT;        // 8位数据
    spi_init_struct.clock_polarity_phase 	= SPI_CK_PL_HIGH_PH_2EDGE;   // 极性相位
    spi_init_struct.nss               		= SPI_NSS_SOFT;              // 软件cs
    spi_init_struct.prescale           		= SPI_PSC_4;                 // SPI时钟预调因数为4
    spi_init_struct.endian            		= SPI_ENDIAN_MSB;            // 高位在前
    //将参数填入SPI0
    spi_init(BSP_SPI, &spi_init_struct);
    //使能SPI
    spi_enable(BSP_SPI);
}

 u8 SPI_FLASH_SendByte(u8 byte)
 {
    //等待发送缓冲区为空
    while(RESET == spi_i2s_flag_get(FLASH_SPIx,  SPI_FLAG_TBE) );
    //通过SPI4发送一个字节数据
    spi_i2s_data_transmit(FLASH_SPIx, byte);

    //等待接收缓冲区不空标志
    while(RESET == spi_i2s_flag_get(FLASH_SPIx,  SPI_FLAG_RBNE) );
    //读取并返回在SPI4读取到的单字节数据
    return spi_i2s_data_receive(FLASH_SPIx);
 }
